<resources>
    <string name="app_name">Melhor Combustível</string>
    <string name="title_text">Aplicativo para calcular o melhor combustível</string>
    <string name="chamada_gasolina">Selecione o preço da Gasolina</string>
    <string name="chamada_alcool">Selecione o Preço do Álcool</string>
    <string name="valorGasolina">0.0</string>
    <string name="valorAlcool">0.0</string>
    <string name="melhor_combustivel_text">É melhor abastecer com:</string>
    <string name="melhorCombustivel_text">Combustível</string>
    <string name="gasolina_txt">Gasolina</string>
    <string name="alcool_txt">Álcool</string>
</resources>
